# Serv

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  DOCUMENTATION.md  QUICKSTART.md  README.md  USAGE.md  bevy_branching_issue.py  bevy_issue_summary.md  claude-latest-session.md  continuation.md  index.html  mkdocs.yml  objects.inv  philosophy.md  pyproject.toml  sitemap.xml
cli-reference/: index.html
demo/: routes.py  serving.prod.yaml
demo/blog/: README.md  routes.py  serving.dev.yaml
demos/: README.md
demos/basic_app/: README.md  main.py
demos/complex_route_demo/: README.md  demo.py  main.py  plugins.py
demos/cookie_form_app/: README.md  main.py
demos/microblog_demo/: README.md  requirements.txt  serv.config.yaml
demos/plugin_middleware_demo/: README.md  __init__.py  serv.config.yaml
demos/plugins-with-declarative-routes/: serv.config.yaml
demos/router_mount_demo/: README.md  __init__.py  main.py
demos/sse_dashboard/: README.md  requirements.txt  serv.config.yaml
demos/websocket_chat/: debug_websocket.py  test_connection.py
docs/: README.md  auth-interface-contracts.md  authentication.md  cli-reference.md  cli.md  configuration.md  dependency-injection.md  error-handling.md  forms.md  gen_ref_pages.py  getting-started.md  index.md  middleware.md  response.md  routing.md  testing.md
docs/getting-started/: configuration.md  first-app.md  quick-start.md
docs/guides/: authentication.md  config-and-envs.md  custom-auth-provider.md  database.md  dependency-injection.md  deployment.md  error-pages-and-theming.md  extensions.md  forms-and-csrf.md  forms.md  hello-world.md  middleware.md  plugins.md  requests.md  responses.md  routing.md  templates.md  testing.md
docs/reference/: SUMMARY.md
examples/: x_forwarded_for_usage.py
extensions/test_extension/: main.py
getting-started/configuration/: index.html
getting-started/first-app/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/authentication/: index.html
guides/database/: index.html
guides/dependency-injection/: index.html
guides/deployment/: index.html
guides/error-handling/: index.html
guides/extensions/: index.html
guides/forms/: index.html
guides/middleware/: index.html
guides/requests/: index.html
guides/responses/: index.html
guides/routing/: index.html
guides/templates/: index.html
guides/testing/: index.html
planning/: PRODUCTION_SAFETY_PLAN.md  README.md
planning/architecture/: 01-route-class-complexity.md  02-circular-dependencies.md  README.md
planning/auth-system/: 00-overview.md  01-audit-system-old.md.obsolete  01-audit-system.md  02-provider-interfaces.md  03-configuration-schema.md  04-route-protection.md  05-implementation-plan.md  06-testing-strategy.md  07-provider-resolution.md  README.md
planning/code-quality/: 01-logic-errors.md  02-code-duplication.md  README.md
planning/developer-experience/: 01-cli-command-inconsistencies.md  02-getting-started-experience.md  README.md
planning/future/: README.md
planning/now/: README.md
planning/organization/: 01-extensions-vs-plugins-terminology.md
planning/routing-refactor/: 00-current-analysis.md  01-proposed-structure.md  02-migration-strategy.md  03-testing-approach.md  04-implementation-checklist.md  README.md
planning/security/: 01-information-disclosure.md  02-xss-vulnerabilities.md  09-missing-security-headers.md  README.md
plugins/test_plugin/: main.py  plugin.yaml
reference/SUMMARY/: index.html
reference/serv/: index.html
scripts/: validate_interfaces.py
search/: search_index.json
serv/: __init__.py  __main__.py  _app.py  _routing.py  additional_context.py  app.py  app_factory.py  cli.py  config.py  exceptions.py  injectors.py  loader.py  middleware.py  multipart_parser.py  observers.py  plugin_loader.py  plugins.py  protocols.py  requests.py  responses.py  routes.py  routing.py  serv.py  test_client.py  websocket.py
serv/app/: __init__.py  extensions.py  lifecycle.py  middleware.py
serv/auth/: __init__.py  audit_logger.py  auth_provider.py  config_loader.py  credential_vault.py  declarative.py  decorators.py  event_enforcer.py  exceptions.py  factory.py  middleware.py  policy_engine.py  rate_limiter.py  role_registry.py  session_manager.py  token_service.py  types.py  utils.py
serv/bundled/: __init__.py
serv/bundled_plugins/: __init__.py
serv/cli/: commands.py  main.py  parser.py  utils.py
tests/: README_TESTING.md  conftest.py  e2e_test_helpers.py  helpers.py  test_app_extension_loading.py  test_app_plugin_loading.py  test_app_welcome_extension.py  test_app_welcome_plugin.py  test_auth_config_system.py  test_basic_routing.py  test_circular_dependency_elimination.py  test_cookie_form_demo.py  test_declarative_auth.py  test_declarative_auth_e2e.py  test_declarative_routers.py  test_declarative_routers_regression.py  test_e2e_example.py  test_e2e_minimal.py  test_error_handling.py  test_event_emit.py  test_extension_routers.py  test_extension_settings.py  test_extensions.py  test_lifespan.py  test_loader.py  test_middleware.py  test_multipart_parser.py  test_no_circular_imports.py  test_observers.py  test_plugin_routers.py  test_plugin_settings.py  test_plugins.py  test_request_form_coercion.py  test_request_multipart_direct.py  test_request_multipart_form.py  test_route_file_upload_validation.py  test_router_mount.py  test_router_url_for.py  test_routes_feature.py  test_test_client.py  (+2 more)
(+294 files in other folders)
