[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serving"
version = "0.1.0a11"
description = "Serv is a powerful, extensible, and minimally opinionated ASGI web framework for Python, designed for building modern web applications and APIs with ease."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Zechariah Zimmerman", email = "zzimmerman@8ly.com"},
]
maintainers = [
    {name = "Zechariah Zimmerman", email = "zzimmerman@8ly.com"},
]
keywords = ["web", "framework", "asgi", "api", "http"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "bevy>=3.1.0b4",
    "starlette>=0.41.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]

[project.urls]
Homepage = "https://github.com/8ly/Serv"
Documentation = "https://8ly.github.io/Serv/"
Repository = "https://github.com/8ly/Serv"
Issues = "https://github.com/8ly/Serv/issues"
Changelog = "https://github.com/8ly/Serv/blob/main/CHANGELOG.md"

[project.optional-dependencies]
server = [
    "uvicorn>=0.34.2",
]

[project.scripts]
serv = "serving.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.2",
    "httpx>=0.28.1",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults (common in dependency injection)
]

[tool.ruff.lint.isort]
known-first-party = ["serving"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/serving"]
